# readme-coverage-badger

./: .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  .versionrc  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tasks.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml  renovate.json
.github/workflows/: dispatch.yml  greetings.yml  main.yml
readme_coverage_badger/: __main__.py
tests/: conftest.py  test_readme_coverage_badger.py
